2012-03-14  Dave Cross <dave@dave.org.uk>

  * lib/Perlanet.pm: Bump version number for release.

  * Build.PL: Make MooseX::ConfigFromFile required for build (as it's used in
  the tests)

  * MANIFEST: Add META.json to MANIFEST.

2011-02-22  Dave Cross <dave@dave.org.uk>

  * lib/Perlanet.pm: Bump version for release.

  * lib/Perlanet/Trait/OPML.pm, t/01_basic.t: Fix support for OPML generation
  (make it _really_ optional).

2010-11-04  Dave Cross <dave@dave.org.uk>

  * lib/Perlanet.pm: Bump to version 0.53 for release.

  * t/pod_coverage.t: Added more subroutines to be skipped in the pod coverage
  tests.

2010-08-26  Dave Cross <dave@dave.org.uk>

  * lib/Perlanet/Entry.pm, lib/Perlanet/Feed.pm, lib/Perlanet/Trait/Cache.pm,
  lib/Perlanet/Trait/FeedFile.pm, lib/Perlanet/Trait/OPML.pm,
  lib/Perlanet/Trait/Scrubber.pm, lib/Perlanet/Trait/TemplateToolkit.pm,
  lib/Perlanet/Trait/Tidy.pm, lib/Perlanet/Trait/YAMLConfig.pm: Added 'use
  strict' and 'use warnings' to all modules.

2010-08-23  Dave Cross <dave@dave.org.uk>

  * lib/Perlanet.pm: Bump version number.

  * lib/Perlanet/Trait/TemplateToolkit.pm: Pass the whole Perlanet object to
  the template in a variable called 'cfg'.

  * lib/Perlanet/Feed.pm: Renamed the 'website' attribute to 'web' (in line
  with old config files).

  * lib/Perlanet.pm: Improved reporting for HTTP errors.

2010-08-22  Dave Cross <dave@dave.org.uk>

  * lib/Perlanet.pm: Bumped to version 0.51. Fixing more problems.

  * MANIFEST: Added more data files to MANIFEST

  * MANIFEST, t/04_mps.t, t/data/stevebaker.xml, t/data/talkcarswell.xml,
  t/mprc: Added some more tests.

  * lib/Perlanet/Trait/Tidy.pm: Minor reformatting.

  * lib/Perlanet.pm: Refactoring clean_entries method.

  * lib/Perlanet/Trait/YAMLConfig.pm: Documentation typo.

  * lib/Perlanet.pm: Fixed documentation.

  * lib/Perlanet/Trait/OPML.pm: Fixed broken OPML handling.

  * t/testrc: Added 'entries_per_feed' config option for tests.
