@@ -9,7 +9,7 @@ build_requires:
 configure_requires:
   Module::Build: 0.38
 dynamic_config: 1
-generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.120351'
+generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.112621'
 keywords:
   - aggregate
   - aggregator
@@ -26,7 +26,7 @@ name: Perlanet
 provides:
   Perlanet:
     file: lib/Perlanet.pm
-    version: 0.55
+    version: 0.56
   Perlanet::Entry:
     file: lib/Perlanet/Entry.pm
     version: 0
@@ -72,7 +72,7 @@ requires:
   Moose: 0
   MooseX::Traits: 0
   Template: 0
-  TryCatch: 0
+  Try::Tiny: 0
   URI::Fetch: 0
   XML::Feed: 0.22
   YAML: 0
@@ -82,4 +82,4 @@ resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/davorg/perlanet.git
   x_MailingList: http://lists.mag-sol.com/mailman/listinfo/perlanet
-version: 0.55
+version: 0.56
